moved a lot of input config variables to the 'global' section

--- a/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -1,10 +1,10 @@
 [global]
 ;; Reference File
-$;REF_FILE$; = 
+$;REFERENCE_FILE$; = 
 ;; Maximum number of reads stored in memory
-$;MAX_READS$; =
+$;MAX_READS_STORED$; =
 ;; Validation Stringency
-$;STRINGENCY$; =
+$;VALIDATION_STRINGENCY$; =
 ;; Prefix to use in naming
 $;PREFIX$; = SNP
 
@@ -17,16 +17,10 @@ $;Prefix$; = $;PREFIX$;
 [haplotype_caller]
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
-;; Reference File
-$;REFERENCE_FILE$; = $;REF_FILE$; 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Standard minimum confidence threshold for calling
 $;STAND_CALL_CONF$; = 
 ;; Don't use soft-clipped bases
 $;NO_SOFT_CLIPPED_BASES$; = 
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Java Memory
 $;Java_Memory$; = -Xms8g
 
@@ -43,26 +37,12 @@ $;PLATFORM$; =
 $;PLATFORM_UNIT$; = 
 ;; Read Group Sample Name
 $;SAMPLE_NAME$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = $;MAX_READS$;
-;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Java Memory
 $;Java_Memory$; = -Xmx5g
 
 [preprocess_alignment]
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = $;REF_FILE$;
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = $;MAX_READS$;
-;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Java Memory
 $;Java_Memory$; = -Xmx5g
 
@@ -85,16 +65,10 @@ $;REMOVE$; = 1
 $;VCFINPUT$; = 1
 ;; String of other misc arguments to pass to table_annovar.pl
 $;OTHER_ARGS$; = 
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 
 [split_spliced_reads]
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = $;REF_FILE$;
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
 ;; Original Mapping Quality (-RMQF option for ReassignOneMappingQuality filter)
 $;ORIG_MAPPING_QUALITY$; = 
 ;; Desired Mapping Quality (-RMQT option for ReassignOneMappingQuality filter)
@@ -103,36 +77,26 @@ $;DESIRED_MAPPING_QUALITY$; =
 $;UNSAFE$; = ALLOW_N_CIGAR_READS
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Java Memory
 $;Java_Memory$; = -Xms8g
 
 [variant_filtration]
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = 
 ;; Cluster Window Size
 $;WINDOW_SIZE$; = 
 ;; Cluster Size
 $;CLUSTER_SIZE$; = 
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
-;; Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Java Memory
 $;Java_Memory$; = -Xms8g
 
 [realigner_target_creator]
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1
-;;Reference 
-$;Reference$; = $;REF_FILE$;
 ;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
-;;Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;additional Realigner Target Creator parameters
 $;OTHER_PARAMETERS$; = 
 ;;use --v for verbose summary
@@ -143,14 +107,10 @@ $;Java_Memory$; = -Xmx5g
 [indel_realigner]
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = $;REF_FILE$;
 ;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
 ;;Target Intervals from Realigner target creator. Will be filled in by the script.
 $;TargetInterval$; = 
-;;Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;additional Indel Realigner parameters
 $;OTHER_PARAMETERS$; = 
 ;;use --v for verbose summary
@@ -161,12 +121,8 @@ $;Java_Memory$; = -Xmx5g
 [base_recalibration]
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = $;REF_FILE$;
 ;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
-;;Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;Known sites
 $;KnownSites$; = 
 ;;additional Base Recalibration parameters
@@ -179,12 +135,8 @@ $;Java_Memory$; = -Xms8g
 [print_reads]
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = $;REF_FILE$;
 ;;Input Bam file. Will be filled in by the script.
 $;INPUT_FILE$; = 
-;;Output Prefix
-$;Prefix$; = $;PREFIX$;
 ;;additional Print Reads parameters
 ;;Base Recalibration table file. Will be filled in by the script.
 $;BQSR$; =
