adding comment to param

--- a/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -3,7 +3,7 @@
 $;REFERENCE_FILE$; = 
 ;; Maximum number of reads stored in memory
 $;MAX_READS_STORED$; =
-;; Validation Stringency
+;; Validation Stringency. Choose from LENIENT, STRICT, or SILENT
 $;VALIDATION_STRINGENCY$; =
 ;; Prefix to use in naming
 $;PREFIX$; = SNP
