--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
@@ -10,6 +10,8 @@ $;OTHER_PARAMETERS$; =
 [input]
 ;; path to mapstats file
 $;INPUT_FILE$; =
+;; path to HISAT2 BAM output list file
+$;HISAT2_BAM_LIST$; = 
 ;; path to list file for all input files
 $;INPUT_FILE_LIST$; = 
 ;; path to directory of multiple single mate sequence files
