adding hisat2 list path

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
@@ -11,7 +11,7 @@ $;OTHER_PARAMETERS$; =
 ;; path to mapstats file
 $;INPUT_FILE$; =
 ;; path to HISAT2 BAM output list file
-$;HISAT2_BAM_LIST$; = 
+$;HISAT2_BAM_LIST$;=$;REPOSITORY_ROOT$;/output_repository/hisat2/$;PIPELINEID$;_alignment/hisat2.bam.list
 ;; path to list file for all input files
 $;INPUT_FILE_LIST$; = 
 ;; path to directory of multiple single mate sequence files
