--- a/package-rnaseq/docs/hisat2.config
+++ b/package-rnaseq/docs/hisat2.config
@@ -52,7 +52,7 @@ $;MIN_FRAGMENT_LENGTH$;= 0
 $;MAX_FRAGMENT_LENGTH$;= 500
 
 ; SAM options
---no-unal = Suppress SAM records for reads that failed to align.
+;; --no-unal = Suppress SAM records for reads that failed to align.
 $;SUPPRESS_UNALIGNMENTS$;=0
 
 ; Performance Options
