--- a/package-rnaseq/pipeline_templates/Prokaryotic_RNA_Seq_Analysis/bam2bigwig.visualization.config
+++ b/package-rnaseq/pipeline_templates/Prokaryotic_RNA_Seq_Analysis/bam2bigwig.visualization.config
@@ -10,7 +10,7 @@ $;UCSC_UTIL_DIR$; = $;UCSC_UTIL$;
 $;BEDTOOLS_BIN_DIR$; = $;BEDTOOLS_BIN$;
 ;; path to samtools package binary directory
 $;SAMTOOLS_BIN_DIR$; = $;SAMTOOLS_BIN$;
-;; use --w to include WIG format files in the output and --v for verbose execution
+;; use --w to include WIG format files in the output, --e for single-end BAM file input and --v for verbose execution
 $;OTHER_ARGS$; = --v
 
 [input]
