--- a/package-rnaseq/docs/align_hisat2_split_stats.config
+++ b/package-rnaseq/docs/align_hisat2_split_stats.config
@@ -3,8 +3,8 @@ classification = RNA-Seq
 
 [parameters]
 
-
 ;; other arguments that can be passed to align_hisat2_split_stats
+;; Use --single_stranded to indicate BAM input is single-stranded
 $;OTHER_PARAMETERS$; = 
 
 [input]
