--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/align_hisat2_split_stats.hisat2_stats.config
@@ -3,8 +3,8 @@ classification = RNA-Seq
 
 [parameters]
 
-
 ;; other arguments that can be passed to align_hisat2_stats
+;; Use --single_stranded to indicate BAM input is single-stranded
 $;OTHER_PARAMETERS$; = 
 
 [input]
