modifying align_hisat_stats option name

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -1,3 +1,13 @@
+[align_hisat_stats]
+;; other arguments that can be passed to align_hisat2_stats
+;; Use --single_end to indicate BAM input is single-end
+$;OTHER_ARGS$; = 
+
+[align_hisat_split_stats]
+;; other arguments that can be passed to align_hisat2_stats
+;; Use --single_end to indicate BAM input is single-end
+$;OTHER_ARGS$; = 
+
 [bowtie_build]
 ;; path to bowtie package binary directory
 $;BOWTIE_BIN_DIR$; = $;BOWTIE_BUILD_BIN$;
@@ -190,7 +200,7 @@ $;UCSC_UTIL_DIR$; =  $;UCSC_UTIL$;
 $;BEDTOOLS_BIN_DIR$; = $;BEDTOOLS_BIN$;
 ;; path to samtools package binary directory
 $;SAMTOOLS_BIN_DIR$; = $;SAMTOOLS_BIN$;
-;; use --w to include WIG format files in the output and --v for verbose execution
+;; use --w to include WIG format files in the output, --e for single-end BAM file input and --v for verbose execution
 $;OTHER_ARGS$; = --v
 
 [htseq]
