--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -8,8 +8,8 @@
 
 [common shared]
 $;BEDTOOLS_BIN$;=/usr/bin/bedtools
-$;SAMTOOLS_BIN$;=/usr/bin/
-$;SAMTOOLS_EXEC$;=/usr/bin/samtools
+$;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
+$;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
 $;R_EXEC$;=/usr/bin/R
 
 [component bam2bigwig]
@@ -89,3 +89,4 @@ $;TOPHAT_EXEC$;=/usr/bin/tophat
 $;TOPHAT_BIN$;=/usr/bin
 $;BOWTIE_EXEC$;=/usr/bin/bowtie
 $;BOWTIE_BIN$;=/usr/bin
+$;SAMTOOLS_BIN$;=/usr/bin
