adjusting bedtools path

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -7,7 +7,7 @@
 ; components ;; common stuff first
 
 [common shared]
-$;BEDTOOLS_BIN$;=/usr/bin/bedtools
+$;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
 $;R_EXEC$;=/usr/bin/R
