--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -48,19 +48,19 @@ $;CUFFQUANT_EXEC$;=/opt/packages/cufflinks/cuffquant
 $;CUFFQUANT_BIN$;=/opt/packages/cufflinks
 
 [component cummerbund]
-$;R_BIN$;=/usr/bin/R
+$;R_BIN$;=/usr/bin
 $;R_SCRIPT_PATH$;=
 
 [component deseq]
-$;R_BIN$;=/usr/bin/R
+$;R_BIN$;=/usr/bin
 $;R_SCRIPT_PATH$;=
 
 [component edgeR]
-$;R_BIN$;=/usr/bin/R
+$;R_BIN$;=/usr/bin
 $;R_SCRIPT_PATH$;=
 
 [component expression_plots]
-$;R_BIN$;=/usr/bin/R
+$;R_BIN$;=/usr/bin
 $;R_SCRIPT_PATH$;=
 
 [component fastqc_stats]
