--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -10,7 +10,7 @@
 $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
-$;R_EXEC$;=/usr/bin/R
+$;R_EXEC$;=/usr/local/bin/R
 
 [component bam2bigwig]
 $;UCSC_UTIL$; = /usr/local/bin/kentUtils
@@ -48,19 +48,19 @@ $;CUFFQUANT_EXEC$;=/opt/packages/cufflinks/cuffquant
 $;CUFFQUANT_BIN$;=/opt/packages/cufflinks
 
 [component cummerbund]
-$;R_BIN$;=/usr/bin
+$;R_BIN$;=/usr/local/bin
 $;R_SCRIPT_PATH$;=
 
 [component deseq]
-$;R_BIN$;=/usr/bin
+$;R_BIN$;=/usr/local/bin
 $;R_SCRIPT_PATH$;=
 
 [component edgeR]
-$;R_BIN$;=/usr/bin
+$;R_BIN$;=/usr/local/bin
 $;R_SCRIPT_PATH$;=
 
 [component expression_plots]
-$;R_BIN$;=/usr/bin
+$;R_BIN$;=/usr/local/bin
 $;R_SCRIPT_PATH$;=
 
 [component fastqc_stats]
