updating config to sort tophat correctly

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -1,9 +1,9 @@
-[align_hisat_stats]
+[align_hisat2_stats]
 ;; other arguments that can be passed to align_hisat2_stats
 ;; Use --single_end to indicate BAM input is single-end
 $;OTHER_ARGS$; = 
 
-[align_hisat_split_stats]
+[align_hisat2_split_stats]
 ;; other arguments that can be passed to align_hisat2_stats
 ;; Use --single_end to indicate BAM input is single-end
 $;OTHER_ARGS$; = 
@@ -113,7 +113,7 @@ $;REF_INSERTIONS_FILE$; =
 ;; List of deletions file
 $;REF_DELETIONS_FILE$; = 
 ;; additional tophat parameters
-$;OTHER_PARAMETERS$; =
+$;OTHER_PARAMETERS$; = --keep-fasta-order
 ;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
 
