fixed broken comment in config

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -154,7 +154,7 @@ $;NUM_ALIGNMENTS$;=
 $;MIN_FRAGMENT_LENGTH$;=
 ;; -X/--maxins <int> = The maximum fragment length for valid paired-end alignments. Default: 500
 $;MAX_FRAGMENT_LENGTH$;=
---no-unal = Suppress SAM records for reads that failed to align.
+;;--no-unal = Suppress SAM records for reads that failed to align.
 $;SUPPRESS_UNALIGNMENTS$;=
 ;; (-p) The number of threads to be used to align reads. Default:1.
 $;NUMBER_THREADS$; =
