--- a/package-lgtseek/docs/blast_lgt_finder.config
+++ b/package-lgtseek/docs/blast_lgt_finder.config
@@ -12,12 +12,8 @@ $;HOST$; = revan.igs.umaryland.edu:10001
 $;TAXONDB$; = gi2taxon
 ;;Name of the gi collection in mongo.
 $;TAXONCOLL$; = gi2taxonnuc
-;A mapping file of clone/matepair to trace/read. If this is not present it will look for _1/_2 at the end of the name to determine pairs.
-$;MAPPING_FILE$;=
-;Reference lineage (Homo for instance). This is only necessary if you are looking for LGT within a trace/read. Also must provide a Donor lineage.
-$;HOST_LINEAGE$;=
-;Query lineage (Bacteria for instance). This is only necessary if you are looking for LGT within a trace/read. Also must provide a Host lineage.
-$;DONOR_LINEAGE$;=
+;Reference lineage ('Home' or 'Bacteria' for instance). This is only necessary if you are looking for LGT within a trace/read.
+$;LINEAGE$;=
 ;Lineage to filter out as bad (example would be 'vector', which would filter out anything that has a best hit to vector or where a hit overlaps vector by more than the filter_min_overlap).
 $;FILTER_LINEAGE$;=
 ;Minimum overlap length between a trace/read hit and the filter_lineage. More than this and a clone/matepair will be filtered out. Only applicable if filter_lineage is set.
