--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_r.config
@@ -13,7 +13,7 @@ $;TAXONDB$; = gi2taxon
 ;;Name of the gi collection in mongo.
 $;TAXONCOLL$; = gi2taxonnuc
 ;Reference lineage ('Home' or 'Bacteria' for instance). This is only necessary if you are looking for LGT within a trace/read.
-$;LINEAGE$;=
+$;LINEAGE$;= 'Eukaryota'
 ;Lineage to filter out as bad (example would be 'vector', which would filter out anything that has a best hit to vector or where a hit overlaps vector by more than the filter_min_overlap).
 $;FILTER_LINEAGE$;=
 ;Minimum overlap length between a trace/read hit and the filter_lineage. More than this and a clone/matepair will be filtered out. Only applicable if filter_lineage is set.
