changing hisat2 path so it's correct in docker

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -75,10 +75,10 @@ $;FASTX_EXEC$;=/usr/bin/fastx_trimmer
 $;FASTX_BIN$;=/usr/bin
 
 [component hisat2]
-$;HISAT2_BIN$;=/usr/local/packages/hisat2-2.0.4
+$;HISAT2_BIN$;=/opt/packages/hisat2
 
 [component hisat2_build]
-$;HISAT2_BUILD_BIN$;=/usr/local/packages/hisat2-2.0.4
+$;HISAT2_BUILD_BIN$;=/opt/packages/hisat2
 
 [component htseq]
 $;PYTHON_BIN$;=
