adding mapfile argument to configs

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -254,12 +254,16 @@ $;OTHER_ARGS$; = --v
 $;FILTERS_VAL$; = FDR=0.05,RCP=0.1,UFC=1,DFC=-1:FDR=0.05,RCP=0.25,UFC=1,DFC=-1:P=0.05,RCP=0.1,UFC=1,DFC=-1:P=0.05,RCP=0.25,UFC=1,DFC=-1
 ;; Project name
 $;PROJECT_NAME$; = test
+;; path to map file
+$;MAPFILE_PATH$; =
 
 [filter_edgeR]
 ;; Filters FDR=0.5,RC=10:FDR=0.3,RC=5:FDR=0.05,RC=15,P=0.05,UFC=1,DFC=-1
 $;FILTERS_VAL$; = FDR=0.05,RC=10,UFC=1,DFC=-1:FDR=0.01,RC=10,UFC=1,DFC=-1:FDR=0.1,RC=10,UFC=1,DFC=-1:P=0.05,RC=10,UFC=1,DFC=-1:P=0.01,RC=10,UFC=1,DFC=-1
 ;; Project name
 $;PROJECT_NAME$; = test
+;; path to map file
+$;MAPFILE_PATH$; =
 
 [cufflinks]
 ;; /path/to/cufflinks bin directory
