--- a/package-rnaseq/pipeline_templates/Prokaryotic_RNA_Seq_Analysis/Prokaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Prokaryotic_RNA_Seq_Analysis/Prokaryotic.RNASeq.pipeline.config
@@ -150,6 +150,8 @@ $;OTHER_ARGS$; = --v
 $;FILTERS_VAL$; = FDR=0.05,RCP=0.1,UFC=1,DFC=-1:FDR=0.05,RCP=0.25,UFC=1,DFC=-1:P=0.05,RCP=0.1,UFC=1,DFC=-1:P=0.05,RCP=0.25,UFC=1,DFC=-1
 ;; Project name
 $;PROJECT_NAME$; = test
+;; path to map file
+$;MAPFILE_PATH$; =
 
 
 [filter_edgeR]
@@ -157,7 +159,8 @@ $;PROJECT_NAME$; = test
 $;FILTERS_VAL$; = FDR=0.05,RC=10,UFC=1,DFC=-1:FDR=0.01,RC=10,UFC=1,DFC=-1:FDR=0.1,RC=10,UFC=1,DFC=-1:P=0.05,RC=10,UFC=1,DFC=-1:P=0.01,RC=10,UFC=1,DFC=-1
 ;; Project name
 $;PROJECT_NAME$; = test
-
+;; path to map file
+$;MAPFILE_PATH$; =
 
 [expression_plots]
 ;; log fold change cutoff for cuffdiff/deseq
