fixing some java memory bugs

--- a/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -22,7 +22,7 @@ $;STAND_CALL_CONF$; =
 ;; Don't use soft-clipped bases
 $;NO_SOFT_CLIPPED_BASES$; = 
 ;;Java Memory
-$;Java_Memory$; = -Xms8g
+$;Java_Memory$; = -Xmx8g
 
 [picard_processing]
 ;;Input BAM file. Will be filled in by the script.
@@ -78,7 +78,7 @@ $;UNSAFE$; = ALLOW_N_CIGAR_READS
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
 ;;Java Memory
-$;Java_Memory$; = -Xms8g
+$;Java_Memory$; = -Xmx8g
 
 [variant_filtration]
 ;;Input BAM file. Will be filled in by the script.
@@ -90,7 +90,7 @@ $;CLUSTER_SIZE$; =
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
 ;;Java Memory
-$;Java_Memory$; = -Xms8g
+$;Java_Memory$; = -Xmx8g
 
 [realigner_target_creator]
 ;;Input Bam file. Will be filled in by the script.
@@ -124,7 +124,7 @@ $;OTHER_PARAMETERS$; = -nct 40
 ;;use --v for verbose summary
 $;OTHER_ARGS$; = --v
 ;;Java Memory
-$;Java_Memory$; = -Xms8g
+$;Java_Memory$; = -Xmx8g
 
 [print_reads]
 ;;Input Bam file. Will be filled in by the script.
