removing crap option

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -325,7 +325,7 @@ $;PREFIX$; = cuffmrg
 ;; path to Cufflinks package binary directory
 $;CUFFLINKS_BIN_DIR$; = $;CUFFMERGE_BIN$;
 ;; additonal Cufflinks parameters
-$;OTHER_PARAMS$; = -R
+$;OTHER_PARAMS$; =
 ;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
 
