adding params and fixing bugs

--- a/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -1,10 +1,12 @@
 [global]
 ;; Reference File
 $;REFERENCE_FILE$; = 
+;; VCF reference with known indels.  If provided will pass -known option
+$;KNOWN_REFERENCE$; =
 ;; Maximum number of reads stored in memory
-$;MAX_READS_STORED$; =
+$;MAX_READS_STORED$; = 1000000
 ;; Validation Stringency. Choose from LENIENT, STRICT, or SILENT
-$;VALIDATION_STRINGENCY$; =
+$;VALIDATION_STRINGENCY$; = LENIENT
 ;; Prefix to use in naming
 $;PREFIX$; = SNP
 
@@ -18,11 +20,11 @@ $;Prefix$; = $;PREFIX$;
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Standard minimum confidence threshold for calling
-$;STAND_CALL_CONF$; = 
+$;STAND_CALL_CONF$; = 20
 ;; Don't use soft-clipped bases
-$;NO_SOFT_CLIPPED_BASES$; = 
+$;NO_SOFT_CLIPPED_BASES$; = 1 
 ;;Java Memory
-$;Java_Memory$; = -Xmx8g
+$;Java_Memory$; = -Xmx250g
 
 [picard_processing]
 ;;Input BAM file. Will be filled in by the script.
@@ -52,13 +54,13 @@ $;INPUT_FILE$; =
 ;; Path to database
 $;DB_PATH$; =
 ;; Protocol
-$;PROTOCOL$; = 
+$;PROTOCOL$; = refGene,cytoBand,genomicSuperDups,esp6500siv2_all,1000g2015aug_all,1000g2015aug_eur,exac03,avsnp147,dbnsfp30a
 ;; Build Version
-$;BUILDVER$; = 
+$;BUILDVER$; = hg38
 ;; Operation
-$;OPERATION$; =
+$;OPERATION$; = g,r,r,f,f,f,f,f,f
 ;; NA String
-$;NASTRING$; =
+$;NASTRING$; = .
 ;; Remove temp files
 $;REMOVE$; = 1
 ;; Specify this is VCF-formatted input
@@ -70,9 +72,9 @@ $;OTHER_ARGS$; =
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Original Mapping Quality (-RMQF option for ReassignOneMappingQuality filter)
-$;ORIG_MAPPING_QUALITY$; = 
+$;ORIG_MAPPING_QUALITY$; = 255
 ;; Desired Mapping Quality (-RMQT option for ReassignOneMappingQuality filter)
-$;DESIRED_MAPPING_QUALITY$; =
+$;DESIRED_MAPPING_QUALITY$; = 60
 ;; String of unsafe operations
 $;UNSAFE$; = ALLOW_N_CIGAR_READS
 ;; String of other misc opts to pass into GATK
@@ -84,11 +86,11 @@ $;Java_Memory$; = -Xmx8g
 ;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Cluster Window Size
-$;WINDOW_SIZE$; = 
+$;WINDOW_SIZE$; = 35
 ;; Cluster Size
-$;CLUSTER_SIZE$; = 
+$;CLUSTER_SIZE$; = 3
 ;; String of other misc opts to pass into GATK
-$;OTHER_OPTS$; = 
+$;OTHER_OPTS$; = '-filterName FS -filter "FS > 30.0" -filterName QD -filter "QD < 2.0"'
 ;;Java Memory
 $;Java_Memory$; = -Xmx8g
 
@@ -96,7 +98,7 @@ $;Java_Memory$; = -Xmx8g
 ;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
 ;;additional Realigner Target Creator parameters
-$;OTHER_PARAMETERS$; = 
+$;OTHER_PARAMETERS$; =
 ;;use --v for verbose summary
 $;OTHER_ARGS$; = --v
 ;;Java Memory
