changed param name to be less ambiguous

--- a/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-grove/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -2,7 +2,7 @@
 ;; Reference File
 $;REFERENCE_FILE$; = 
 ;; VCF reference with known indels.  If provided will pass -known option
-$;KNOWN_REFERENCE$; =
+$;INDEL_REFERENCE$; =
 ;; Maximum number of reads stored in memory
 $;MAX_READS_STORED$; = 1000000
 ;; Validation Stringency. Choose from LENIENT, STRICT, or SILENT
