--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_d.config
@@ -7,7 +7,7 @@ $;NCBITAX$; = $;NCBI_TAX_BIN$;
 ;Location of the gi_taxid_nucl.dmp file for nucleotides or gi_taxid_prot.dmp file for proteins
 $;GI2TAX$; =
 ;Host name of the mongo database
-$;HOST$; = revan.igs.umaryland.edu:10001
+$;HOST$; = him.igs.umaryland.edu:10001
 ;Name of the gi database in mongo
 $;TAXONDB$; = gi2taxon
 ;;Name of the gi collection in mongo.
