Added BDBag Component

--- a/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
+++ b/package-rnaseq/pipeline_templates/Eukaryotic_RNA_Seq_Analysis/Eukaryotic.RNASeq.pipeline.config
@@ -410,4 +410,20 @@ $;R_PARAMS$; =
 ;; path to R Script for CummeRbund Analysis. Optional [cummerbund_isoform_analysis.R]
 $;R_SCRIPT$; = 
 ;; use --v for verbose summary
+$;OTHER_ARGS$; =
+
+[bdbag]
+;; path to R statistical package binary directory [/usr/local/packages/r-3.4-0/bin]
+$;R_BIN_DIR$; =
+;; additonal R parameters
+$;R_PARAMS$; =
+;; path to R Script for BDBag to pull cloud files Analysis. Optional.
+$;R_SCRIPT$; =
+;; path to R Script for Generate all counts. Optional
+$;R_COUNTS$; =
+;; path to R Script for Rename DE counts. Optional.
+$;R_RENAME$; =
+;; other args without key value pairs, like...
 $;OTHER_ARGS$; = 
+;; pull sam, bam or bam,sam
+$;INCLUDEF$; =
