--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -5,88 +5,91 @@
 ; under [component wu-blastp] will only be evaluated when running the wu-blastp
 ; component.  Tokens under any 'common' section will be evaluated for all
 ; components ;; common stuff first
-
 [common shared]
-$;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
-$;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
-$;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
-$;R_EXEC$;=/usr/local/bin/R
+$;BEDTOOLS_BIN$;=/usr/local/bin/
+$;SAMTOOLS_BIN$;=/usr/local/bin/
+$;SAMTOOLS_EXEC$;=/usr/local/packages/samtools-1.3.1/bin/samtools
+$;R_EXEC$;=/usr/local/packages/r/bin/R
 
 [component bam2bigwig]
-$;UCSC_UTIL$; = /usr/local/bin/kentUtils
+$;UCSC_UTIL$;=/usr/local/packages/ucsc_utils/bin
 
 [component bowtie]
-$;BOWTIE_EXEC$;=/usr/bin/bowtie/
-$;BOWTIE_BIN$;=/usr/bin/
+$;BOWTIE_EXEC$;=/usr/local/packages/bowtie/bowtie/
+$;BOWTIE_BIN$;=/usr/local/packages/bowtie
 
 [component bowtie_build]
-$;BOWTIE_BUILD_EXEC$;=/usr/bin/bowtie-build
-$;BOWTIE_BUILD_BIN$;=/usr/bin
+$;BOWTIE_BUILD_EXEC$;=/usr/local/packages/bowtie/bowtie-build
+$;BOWTIE_BUILD_BIN$;=/usr/local/packages/bowtie
 
 [component cuffcompare]
-$;CUFFCOMPARE_EXEC$;=/opt/packages/cufflinks/cuffcompare
-$;CUFFCOMPARE_BIN$;=/opt/packages/cufflinks
+$;CUFFCOMPARE_EXEC$;=/usr/local/bin/cuffcompare
+$;CUFFCOMPARE_BIN$;=/usr/local/bin
 
 [component cuffdiff]
-$;CUFFDIFF_EXEC$;=/opt/packages/cufflinkscuffdiff
-$;CUFFDIFF_BIN$;=/opt/packages/cufflinks
+$;CUFFDIFF_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffdiff
+$;CUFFDIFF_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
 
 [component cufflinks]
-$;CUFFLINKS_EXEC$;=/opt/packages/cufflinks/cufflinks
-$;CUFFLINKS_BIN$;=/opt/packages/cufflinks
+$;CUFFLINKS_EXEC$;=/usr/local/bin/cufflinks
+$;CUFFLINKS_BIN$;=/usr/local/bin
 
 [component cuffmerge]
-$;CUFFMERGE_EXEC$;=/opt/packages/cufflinks/cuffmerge
-$;CUFFMERGE_BIN$;=/opt/packages/cufflinks
+$;CUFFMERGE_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffmerge
+$;CUFFMERGE_BIN$;=//usr/local/packages/cufflinks-2.2.1/bin
 
 [component cuffnorm]
-$;CUFFNORM_EXEC$;=/opt/packages/cufflinks/cuffnorm
-$;CUFFNORM_BIN$;=/opt/packages/cufflinks
+$;CUFFNORM_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffnorm
+$;CUFFNORM_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
 
 [component cuffquant]
-$;CUFFQUANT_EXEC$;=/opt/packages/cufflinks/cuffquant
-$;CUFFQUANT_BIN$;=/opt/packages/cufflinks
+$;CUFFQUANT_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffquant
+$;CUFFQUANT_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
 
 [component cummerbund]
-$;R_BIN$;=/usr/local/bin
+$;R_BIN$;=/usr/local/packages/r-3.3.1/bin
 $;R_SCRIPT_PATH$;=
 
 [component deseq]
-$;R_BIN$;=/usr/local/bin
+$;R_BIN$;=/usr/local/packages/r-3.3.1/bin
 $;R_SCRIPT_PATH$;=
 
 [component edgeR]
-$;R_BIN$;=/usr/local/bin
+$;R_BIN$;=/usr/local/packages/r-3.3.1/bin
 $;R_SCRIPT_PATH$;=
 
 [component expression_plots]
-$;R_BIN$;=/usr/local/bin
+$;R_BIN$;=/usr/local/packages/r-3.3.1/bin
 $;R_SCRIPT_PATH$;=
 
 [component fastqc_stats]
-$;FASTQC_BIN$;=/usr/bin
+$;FASTQC_BIN$;=/usr/local/packages/fastqc/
 
 [component fastx_quality_stats]
-$;FASTX_EXEC$;=/usr/bin/fastx_quality_stats
-$;FASTX_BIN$;=/usr/bin
+$;FASTX_EXEC$;=/usr/local/packages/fastx_toolkit/fastx_quality_stats
+$;FASTX_BIN$;=/usr/local/packages/fastx_toolkit/
 
 [component fastx_trimming]
-$;FASTX_EXEC$;=/usr/bin/fastx_trimmer
-$;FASTX_BIN$;=/usr/bin
+$;FASTX_EXEC$;=/usr/local/packages/fastx_toolkit/fastx_trimmer
+$;FASTX_BIN$;=/usr/local/packages/fastx_toolkit
 
 [component hisat2]
-$;HISAT2_BIN$;=/opt/packages/hisat2
+$;HISAT2_BIN$;=/usr/local/packages/hisat2-2.0.4
 
 [component hisat2_build]
-$;HISAT2_BUILD_BIN$;=/opt/packages/hisat2
+$;HISAT2_BUILD_BIN$;=/usr/local/packages/hisat2-2.0.4
 
 [component htseq]
-$;PYTHON_BIN$;=
-$;PYTHON_LIB$;=
+$;PYTHON_BIN$;=/usr/local/packages/python-2.7.14/bin
+$;PYTHON_LIB$;=/usr/local/packages/python-2.7.14/lib
 
 [component tophat]
-$;TOPHAT_EXEC$;=/usr/bin/tophat
-$;TOPHAT_BIN$;=/usr/bin
-$;BOWTIE_EXEC$;=/usr/bin/bowtie
-$;BOWTIE_BIN$;=/usr/bin
+$;TOPHAT_EXEC$;=/usr/local/packages/tophat/tophat
+$;TOPHAT_BIN$;=/usr/local/packages/tophat/
+$;BOWTIE_EXEC$;=/usr/local/packages/bowtie/bowtie
+$;BOWTIE_BIN$;=/usr/local/packages/bowtie/
 $;SAMTOOLS_BIN$;=/usr/bin
+
+[component bdbag]
+$;R_BIN$;=/usr/local/packages/r-3.4.0/bin
+$;R_SCRIPT_PATH$;=
