changing path to samtools for non-tophat runs

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -11,8 +11,8 @@
 
 [common shared]
 $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
-$;SAMTOOLS_BIN$;=/usr/bin
-$;SAMTOOLS_EXEC$;=/usr/bin/samtools
+$;SAMTOOLS_BIN$;=/usr/src/samtools
+$;SAMTOOLS_EXEC$;=/usr/src/samtools/samtools
 $;R_EXEC$;=/usr/local/bin/R
 $;CUFFLINKS_BIN$;=/opt/packages/cufflinks
 
