moving some packages around to keep consistency

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -11,8 +11,8 @@
 
 [common shared]
 $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
-$;SAMTOOLS_BIN$;=/usr/src/samtools
-$;SAMTOOLS_EXEC$;=/usr/src/samtools/samtools
+$;SAMTOOLS_BIN$;=/opt/packages/samtools
+$;SAMTOOLS_EXEC$;=/opt/packages/samtools/samtools
 $;R_EXEC$;=/usr/local/bin/R
 $;CUFFLINKS_BIN$;=/opt/packages/cufflinks
 
@@ -68,7 +68,7 @@ $;R_BIN$;=/usr/local/bin
 $;R_SCRIPT_PATH$;=
 
 [component fastqc_stats]
-$;FASTQC_BIN$;=/usr/bin
+$;FASTQC_BIN$;=/opt/packages/fastqc
 
 [component fastx_quality_stats]
 $;FASTX_EXEC$;=/usr/bin/fastx_quality_stats
