correcting samtools path again

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -11,8 +11,8 @@
 
 [common shared]
 $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
-$;SAMTOOLS_BIN$;=/opt/packages/samtools
-$;SAMTOOLS_EXEC$;=/opt/packages/samtools/samtools
+$;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
+$;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
 $;R_EXEC$;=/usr/local/bin/R
 $;CUFFLINKS_BIN$;=/opt/packages/cufflinks
 
