--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.blast_d_m8.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.blast_d_m8.config
@@ -3,14 +3,14 @@ classification=utility
 
 [input]
 ; All files in input list will be concatenated into output file. Can comma-separate lists to concatenate all elements
-$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/blastn_plus/$;PIPELINEID$;_nt_r/blastn_plus.m8.list
+$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/blastn_plus/$;PIPELINEID$;_nt_d/blastn_plus.m8.list
 ; Comma-separated string of input files
 $;INPUT_FILES$; = 
 
 [output]
-$;OUTPUT_TOKEN$;=blast_r
+$;OUTPUT_TOKEN$;=blast_d_m8
 $;OUTPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/blastn.out
+$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/blastn.m8.out
 
 [component]
 $;COMPONENT_NAME$;=concatenate_files
