changing deseq path at least temporarily for the workshop

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -57,7 +57,7 @@ $;R_SCRIPT_PATH$;=
 
 [component deseq]
 $;R_BIN$;=/usr/local/bin
-$;R_SCRIPT_PATH$;=
+$;R_SCRIPT_PATH$;=/opt/ergatis/bin/deseq_v2b3.R
 
 [component edgeR]
 $;R_BIN$;=/usr/local/bin
