--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast_lgt_finder.lgt_d.config
@@ -25,7 +25,7 @@ $;MAX_OVERLAP$;=0
 
 [input]
 $;INPUT_FILE_LIST$; =
-$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d_m8/blastn.out
+$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d_m8/blastn.m8.out
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
