fixing bug that caused infinite loop

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -14,7 +14,7 @@ $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
 $;R_EXEC$;=/usr/local/bin/R
-$;CUFFLINKS_BIN$;=/opt/packages/cufflinks
+$;CUFFSUITE_BIN$;=/opt/packages/CUFFSUITE
 
 [component bam2bigwig]
 $;UCSC_UTIL$;=/usr/local/bin/kentUtils
@@ -28,28 +28,28 @@ $;BOWTIE_BUILD_EXEC$;=/usr/bin/bowtie-build
 $;BOWTIE_BUILD_BIN$;=/usr/bin
 
 [component cuffcompare]
-$;CUFFCOMPARE_EXEC$;=$;CUFFLINKS_BIN$;/cuffcompare
-$;CUFFCOMPARE_BIN$;=$;CUFFLINKS_BIN$;
+$;CUFFCOMPARE_EXEC$;=$;CUFFSUITE_BIN$;/cuffcompare
+$;CUFFCOMPARE_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cuffdiff]
-$;CUFFDIFF_EXEC$;=$;CUFFLINKS_BIN$;/cuffdiff
-$;CUFFDIFF_BIN$;=$;CUFFLINKS_BIN$;
+$;CUFFDIFF_EXEC$;=$;CUFFSUITE_BIN$;/cuffdiff
+$;CUFFDIFF_BIN$;=$;CUFFSUITE_BIN$;
 
-[component cufflinks]
-$;CUFFLINKS_EXEC$;=$;CUFFLINKS_BIN$;/cufflinks
-$;CUFFLINKS_BIN$;=$;CUFFLINKS_BIN$;
+[component CUFFSUITE]
+$;CUFFLINKS_EXEC$;=$;CUFFSUITE_BIN$;/CUFFSUITE
+$;CUFFLINKS_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cuffmerge]
-$;CUFFMERGE_EXEC$;=$;CUFFLINKS_BIN$;/cuffmerge
-$;CUFFMERGE_BIN$;=$;CUFFLINKS_BIN$;
+$;CUFFMERGE_EXEC$;=$;CUFFSUITE_BIN$;/cuffmerge
+$;CUFFMERGE_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cuffnorm]
-$;CUFFNORM_EXEC$;=$;CUFFLINKS_BIN$;/cuffnorm
-$;CUFFNORM_BIN$;=$;CUFFLINKES_BIN$;
+$;CUFFNORM_EXEC$;=$;CUFFSUITE_BIN$;/cuffnorm
+$;CUFFNORM_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cuffquant]
-$;CUFFQUANT_EXEC$;=$;CUFFLINKS_BIN$;/cuffquant
-$;CUFFQUANT_BIN$;=$;CUFFLINKS_BIN$;
+$;CUFFQUANT_EXEC$;=$;CUFFSUITE_BIN$;/cuffquant
+$;CUFFQUANT_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cummerbund]
 $;R_BIN$;=/usr/local/bin
