fixing more software config typos

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -35,8 +35,8 @@ $;CUFFCOMPARE_BIN$;=$;CUFFSUITE_BIN$;
 $;CUFFDIFF_EXEC$;=$;CUFFSUITE_BIN$;/cuffdiff
 $;CUFFDIFF_BIN$;=$;CUFFSUITE_BIN$;
 
-[component CUFFSUITE]
-$;CUFFLINKS_EXEC$;=$;CUFFSUITE_BIN$;/CUFFSUITE
+[component cufflinks]
+$;CUFFLINKS_EXEC$;=$;CUFFSUITE_BIN$;/cufflinks
 $;CUFFLINKS_BIN$;=$;CUFFSUITE_BIN$;
 
 [component cuffmerge]
