--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -6,8 +6,11 @@
 ; component.  Tokens under any 'common' section will be evaluated for all
 ; components ;; common stuff first
 
-;; NOTE - Paths in this file should reflect where they would be in a Docker build.
+;;;;;;;
+;; IMPORTANT NOTE - Paths in this file should reflect where they would be in a Docker build. 
+;; DO NOT MODIFY THIS DOCUMENT
 ;; To modify paths for internal pipelines, please edit the global software.config file internally, which overwrites the paths from this file
+;;;;;;;
 
 [common shared]
 $;BEDTOOLS_BIN$;=/opt/packages/bedtools/bin
